--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DATABASE = "mongodb+srv://Drax09:aman_codes@cluster0.8xwasga.mongodb.net/mernstack?retryWrites=true&w=majority"
+BASE_URL = "http://localhost:6010"
